<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.HomeFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.mysamplemiddledev.viewModel.MyViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing"
                app:title="Find and save users"
                app:expandedTitleTextAppearance="@style/TransparentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax">

                    <EditText
                        android:id="@+id/edit_query_location"
                        style="@style/EditText_Query_Style"
                        android:hint="@string/query_location"
                        android:text="@={viewModel.city}"
                        app:layout_constraintEnd_toStartOf="@+id/edit_query_language"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edit_query_language"
                        style="@style/EditText_Query_Style"
                        android:layout_margin="6dp"
                        android:hint="@string/query_language"
                        android:text="@={viewModel.language}"
                        app:layout_constraintBottom_toBottomOf="@+id/edit_query_location"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/edit_query_location"
                        app:layout_constraintTop_toTopOf="@id/edit_query_location" />

                    <Button
                        android:id="@+id/habr_button"
                        style="@style/ButtonRetrofitStyle"
                        android:background="@color/buttonHubr"
                        android:onClick="@{()->viewModel.getUsersFromGitHub()}"
                        android:text="@string/titile_button_get_hubr"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edit_query_language" />

                    <Button
                        android:id="@+id/colibri_button"
                        style="@style/ButtonRetrofitStyle"
                        android:background="@color/buttonColibri"
                        android:onClick="@{()->viewModel.getPostFromColibri()}"
                        android:text="@string/title_buttonToGetFrom_Colibry"
                        app:layout_constraintEnd_toStartOf="@+id/colibri_button_post"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/habr_button" />

                    <Button
                        android:id="@+id/colibri_button_post"
                        style="@style/ButtonRetrofitStyle"
                        android:background="@color/buttonColibri"
                        android:onClick="@{()->viewModel.postToColibri()}"
                        android:text="@string/title_colibryButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/colibri_button"
                        app:layout_constraintTop_toBottomOf="@+id/habr_button" />

                    <TextView
                        android:id="@+id/text_view_factCats"
                        style="@style/TextViewTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty_textView"
                        app:layout_collapseMode="pin"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/colibri_button_post" />

                    <View
                        android:id="@+id/divider_text"
                        style="@style/Divider_style"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_factCats" />


                    <View
                        android:id="@+id/divider"
                        style="@style/Divider_style"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/habr_button" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar_material"
                    android:layout_width="match_parent"
                    android:fitsSystemWindows="true"
                    android:layout_height="?actionBarSize"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    app:layout_collapseMode="pin"
                    app:popupTheme="?actionBarPopupTheme" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_response_user_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_text"
            tools:listitem="@layout/item_user" />
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_factCats" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>